# lazynixos

./: .gitignore  Cargo.toml  LICENSE  README.md  commands.go  flake.nix  go.mod  go.sum  hosts.go  keymap.go  main.go  model.go  styles.go
src/: app.rs  cli.rs  cmd.rs  image.rs  main.rs  tui.rs  types.rs  ui.rs
