[package]
name = "lazynixos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.29.0"
image = "0.25"
ratatui = "0.30.0"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
